--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta chareset="UTF-8">
 <title>Bio page </title>
- <link rel="stylesheet" href="assets/css/reset.css">
+ <!--<link rel="stylesheet" href="assets/css/reset.css">-->
  <link rel="stylesheet" href="assets/css/style.css">
    <!--<link rel="stylesheet" href="static.css">-->
   <!--<link rel="stylesheet" href="relative.css">-->
@@ -13,17 +13,29 @@
   <!--<link rel="stylesheet" href="invisible.css">-->
 </head>
 <body>
-<ul>
-<li style="float:right"><a href="#portfolio">Portfolio</a></li>
-<li style="float:right"><a href="#contact">Contact</a></li>
-<li style="float:right"><a href="#about">About</a></li>
-</ul>
+<header>
+	<li><a href="#oswalin">Oswalin</a></li>
+	<li style="float:right"><a href="#portfolio">Portfolio</a></li>
+	<li style="float:right"><a href="#contact">Contact</a></li>
+	<li style="float:right"><a href="#about">About</a></li>
+</header>
+
+
+<div class="container">
 <div class="About">
 <h1>About Me</h1>
-<img src ="https://placehold.it/200x200"  alt="myname">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum malesuada commodo laoreet. Duis sit amet vestibulum tellus, ut feugiat dui. Etiam cursus venenatis mollis. Cras rutrum urna at ligula maximus ultricies. Vestibulum eleifend lectus et magna porta vulputate. In arcu ipsum, porta et elementum sed, egestas sit amet nisi. Aenean fermentum dolor vitae neque auctor, sed lacinia nisi pulvinar. Fusce molestie felis arcu, vel laoreet tellus porttitor ut. Nulla enim ligula, lobortis in tortor in, elementum dignissim mauris. Aenean dignissim sodales lorem vel rutrum. In tincidunt porta nisi, vel tempus tellus consequat a.</p>
+<img id="pic" src ="assets/images/images copy.jpeg" alt="myname"  style="width:300px;height:300px;">
+<p id="test1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum malesuada commodo laoreet. Duis sit amet vestibulum tellus, ut feugiat dui. Etiam cursus venenatis mollis. Cras rutrum urna at ligula maximus ultricies. Vestibulum eleifend lectus et magna porta vulputate. In arcu ipsum, porta et elementum sed, egestas sit amet nisi. Aenean fermentum dolor vitae neque auctor, sed lacinia nisi pulvinar. Fusce molestie felis arcu, vel laoreet tellus porttitor ut. Nulla enim ligula, lobortis in tortor in, elementum dignissim mauris. Aenean dignissim sodales lorem vel rutrum. In tincidunt porta nisi, vel tempus tellus consequat a.</p>
 
-<p>Praesent molestie elit eu tellus hendrerit, et ornare leo hendrerit. Quisque fermentum laoreet nulla, nec laoreet tellus commodo sed. Donec nec mauris enim. Nulla sollicitudin placerat consectetur. Ut sit amet lorem magna. Integer mauris arcu, aliquam finibus tortor vel, mollis feugiat lectus. Duis quis porta mi, ut volutpat ante. Nam auctor ligula sed eros porttitor porta. Donec aliquet eros ex, vitae mattis eros vehicula vitae. Sed eu dui rhoncus, elementum metus id, dapibus est. Ut molestie luctus metus, vel accumsan leo facilisis porttitor. Pellentesque pretium, leo ac varius ultrices, erat arcu maximus tortor, id congue quam risus in sem. Duis ultricies pharetra imperdiet. Nullam pulvinar tellus tortor, non viverra ante lobortis ut. Aenean sed ipsum in mi interdum fermentum. Praesent id nisi et urna consequat rhoncus et congue tortor.</p>
+<p id="test2">Praesent molestie elit eu tellus hendrerit, et ornare leo hendrerit. Quisque fermentum laoreet nulla, nec laoreet tellus commodo sed. Donec nec mauris enim. Nulla sollicitudin placerat consectetur. Ut sit amet lorem magna. Integer mauris arcu, aliquam finibus tortor vel, mollis feugiat lectus. Duis quis porta mi, ut volutpat ante. Nam auctor ligula sed eros porttitor porta. Donec aliquet eros ex, vitae mattis eros vehicula vitae. Sed eu dui rhoncus, elementum metus id, dapibus est. Ut molestie luctus metus, vel accumsan leo facilisis porttitor. Pellentesque pretium, leo ac varius ultrices, erat arcu maximus tortor, id congue quam risus in sem. Duis ultricies pharetra imperdiet. Nullam pulvinar tellus tortor, non viverra ante lobortis ut. Aenean sed ipsum in mi interdum fermentum. Praesent id nisi et urna consequat rhoncus et congue tortor.</p>
+
 </div>
+<div class=aside>
+<img id="pic1" src="assets/images/images.jpeg"  alt="linkin"  style="width:40px; height:40px;">
+<img id="pic2"  src="assets/images/Unknown.png"  alt="stackoverflow" style="width:40px; height:40px;">
+<img id="pic3" src="assets/images/images.png" alt="github"  style="width: 40px; height: 40px;">
+</div>
+</div>
+<footer>compie right 2016</footer>
 </body>
 </html>
