--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,17 @@
   <!--<link rel="stylesheet" href="invisible.css">-->
 </head>
 
-<body class="contact">
-<form>
+<body>
+
+<header>
+  <li style="float:right"><a href="#portfolio">Portfolio</a></li>
+  <li style="float:right"><a href="#contact">Contact</a></li>
+  <li style="float:right"><a href="#about">About</a></li>
+</header>
+
+<div class="late">
+<div class="contact">
+<form >
   <label for="name">Name</label>
   <input type="text" id="name" name="name">
   <label for="email">Email</label>
@@ -22,5 +31,14 @@
   <textarea> </textarea>
 </form>
 <input class="bad" type="submit" value="Submit">
+
+</div>
+<div class=aside>
+<img id="pic1" src="assets/images/images.jpeg"  alt="linkin"  style="width:40px; height:40px;">
+<img id="pic2"  src="assets/images/Unknown.png"  alt="stackoverflow" style="width:40px; height:40px;">
+<img id="pic3" src="assets/images/images.png" alt="github"  style="width: 40px; height: 40px;">
+</div>
+</div>
+<footer>compie right 2016</footer>
 </body>
 </html>
