--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
- <!--<link rel="stylesheet" href="assets/css/reset.css">-->
+  <link rel="stylesheet" href="assets/css/reset.css">
  <link rel="stylesheet" href="assets/css/style.css">
    <!--<link rel="stylesheet" href="static.css">-->
   <!--<link rel="stylesheet" href="relative.css">-->
@@ -15,30 +15,31 @@
 <body>
 
 <header>
-  <li style="float:right"><a href="#portfolio">Portfolio</a></li>
-  <li style="float:right"><a href="#contact">Contact</a></li>
-  <li style="float:right"><a href="#about">About</a></li>
+  <li style="float:right"><a href="portfolio.html">Portfolio</a></li>
+  <li style="float:right"><a href="contact.html">Contact</a></li>
+  <li style="float:right"><a href="index.html">About</a></li>
 </header>
 
-<div class="late">
-<div class="contact">
+<div class="container">
+<div class="about">
 <form >
-  <label for="name">Name</label>
-  <input type="text" id="name" name="name">
-  <label for="email">Email</label>
-  <input type="text" id="email" name="email">
-  <label for="message">Message</label>
-  <textarea> </textarea>
+  <label id="line1" for="name">Name</label>
+  <input id="line1" type="text" id="name" name="name">
+  <label id="line2" for="email">Email</label>
+  <input id="line2" type="text" id="email" name="email">
+  <label id="line3" for="message">Message</label>
+  <textarea id="line3"> </textarea>
 </form>
 <input class="bad" type="submit" value="Submit">
 
 </div>
 <div class=aside>
+<h3 class="test">Connect with Me</h3>
 <img id="pic1" src="assets/images/images.jpeg"  alt="linkin"  style="width:40px; height:40px;">
 <img id="pic2"  src="assets/images/Unknown.png"  alt="stackoverflow" style="width:40px; height:40px;">
 <img id="pic3" src="assets/images/images.png" alt="github"  style="width: 40px; height: 40px;">
 </div>
 </div>
-<footer>compie right 2016</footer>
+<footer>compyright 2016</footer>
 </body>
 </html>
