--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta chareset="UTF-8">
 <title>Bio page </title>
- <!--<link rel="stylesheet" href="assets/css/reset.css">-->
+ <link rel="stylesheet" href="assets/css/reset.css">
  <link rel="stylesheet" href="assets/css/style.css">
    <!--<link rel="stylesheet" href="static.css">-->
   <!--<link rel="stylesheet" href="relative.css">-->
@@ -13,17 +13,17 @@
   <!--<link rel="stylesheet" href="invisible.css">-->
 </head>
 <body>
+
 <header>
-	<li><a href="#oswalin">Oswalin</a></li>
-	<li style="float:right"><a href="#portfolio">Portfolio</a></li>
-	<li style="float:right"><a href="#contact">Contact</a></li>
-	<li style="float:right"><a href="#about">About</a></li>
+	<li style="float:right"><a href="portfolio.html">Portfolio</a></li>
+	<li style="float:right"><a href="contact.html">Contact</a></li>
+	<li style="float:right"><a href="index.html">About</a></li>
 </header>
 
 
 <div class="container">
 <div class="About">
-<h1>About Me</h1>
+<h1 class="mtst">About Me</h1>
 <img id="pic" src ="assets/images/images copy.jpeg" alt="myname"  style="width:300px;height:300px;">
 <p id="test1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum malesuada commodo laoreet. Duis sit amet vestibulum tellus, ut feugiat dui. Etiam cursus venenatis mollis. Cras rutrum urna at ligula maximus ultricies. Vestibulum eleifend lectus et magna porta vulputate. In arcu ipsum, porta et elementum sed, egestas sit amet nisi. Aenean fermentum dolor vitae neque auctor, sed lacinia nisi pulvinar. Fusce molestie felis arcu, vel laoreet tellus porttitor ut. Nulla enim ligula, lobortis in tortor in, elementum dignissim mauris. Aenean dignissim sodales lorem vel rutrum. In tincidunt porta nisi, vel tempus tellus consequat a.</p>
 
@@ -31,11 +31,12 @@
 
 </div>
 <div class=aside>
+<h3 class="test">Connect with Me</h3>
 <img id="pic1" src="assets/images/images.jpeg"  alt="linkin"  style="width:40px; height:40px;">
 <img id="pic2"  src="assets/images/Unknown.png"  alt="stackoverflow" style="width:40px; height:40px;">
 <img id="pic3" src="assets/images/images.png" alt="github"  style="width: 40px; height: 40px;">
 </div>
 </div>
-<footer>compie right 2016</footer>
+<footer>compyright 2016</footer>
 </body>
 </html>
